--- a/mule-lint-introduction.tex
+++ b/mule-lint-introduction.tex
@@ -20,6 +20,11 @@
 % drastically increase how good the document looks. You will now need to
 % compile with XeLaTeX.
 %
+%
+%
+% *********************************
+% See https://www.overleaf.com/11944323kryrwqdhytpv#/45344319/
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[a4paper,12pt]{article} % The default font size is 12pt on A4 paper, change to 'usletter' for US Letter paper and adjust margins in structure.tex
